--- a/SoftwareDesignII/Web.config
+++ b/SoftwareDesignII/Web.config
@@ -9,15 +9,15 @@
   <connectionStrings>
     <!----><add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
       providerName="System.Data.SqlClient" />
-    <add name="ExamSystemConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=&quot;C:\Program Files\Microsoft SQL Server\MSSQL10.MSSQLSERVER\MSSQL\DATA\ExamSystem.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
+    <add name="ExamSystemConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=&quot;C:\Program Files\Microsoft SQL Server\MSSQL10_50.SQLEXPRESS\MSSQL\DATA\ExamSystem.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
       providerName="System.Data.SqlClient" />
-    <add name="TestConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=&quot;C:\Program Files\Microsoft SQL Server\MSSQL10.MSSQLSERVER\MSSQL\DATA\ExamSystem.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
+    <add name="TestConnectionString" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=&quot;C:\Program Files\Microsoft SQL Server\MSSQL10_50.SQLEXPRESS\MSSQL\DATA\ExamSystem.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
       providerName="System.Data.SqlClient" />
 	<!-- <add name="ApplicationServices" connectionString="data source=192.168.3.124\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true"
       providerName="System.Data.SqlClient" />
-	  <add name="ExamSystemConnectionString" connectionString="Data Source=192.168.3.124\SQLEXPRESS;AttachDbFilename=&quot;C:\Program Files\Microsoft SQL Server\MSSQL10.MSSQLSERVER\MSSQL\DATA\ExamSystem.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
+	  <add name="ExamSystemConnectionString" connectionString="Data Source=192.168.3.124\SQLEXPRESS;AttachDbFilename=&quot;C:\Program Files\Microsoft SQL Server\MSSQL10_50.SQLEXPRESS\MSSQL\DATA\ExamSystem.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
 		providerName="System.Data.SqlClient" />
-	  <add name="TestConnectionString" connectionString="Data Source=192.168.3.124\SQLEXPRESS;AttachDbFilename=&quot;C:\Program Files\Microsoft SQL Server\MSSQL10.MSSQLSERVER\MSSQL\DATA\ExamSystem.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
+	  <add name="TestConnectionString" connectionString="Data Source=192.168.3.124\SQLEXPRESS;AttachDbFilename=&quot;C:\Program Files\Microsoft SQL Server\MSSQL10_50.SQLEXPRESS\MSSQL\DATA\ExamSystem.mdf&quot;;Integrated Security=True;Connect Timeout=30;User Instance=True"
 		providerName="System.Data.SqlClient" />--> 
   </connectionStrings>
 
